Add missing Objects import for GHRepository